logging/eck/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logging
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - host: kibana.demo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: logging-kb-http
          servicePort: 5601
